# 6620

./: .dockerignore  .env.example  .gitignore  Dockerfile  ESG_RAG_项目报告.docx  PROJECT_REPORT.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
docs/: agent_compliance.md  agent_confidence.md  agent_evidence_fusion.md  agent_planner.md  agent_report.md  agent_report_llm.md  agent_retrieval.md  agent_trace.md  agent_verification.md  deployment_requirements.md  document_processing_complete_guide.md  file_processing_flow.md  index_quality_improvements.md  retrieval_and_query_complete_guide.md  workflow_overview.md
docs/agents/: 01_planner_agent.md  02_retrieval_agent.md  03_evidence_fusion_agent.md  04_verification_agent.md  05_compliance_agent.md  06_confidence_agent.md  07_trace_agent.md  08_report_agent.md  09_llm_client.md  README.md
src/esg_rag/: __init__.py  agents.py  chunking.py  config.py  document_loader.py  embedding.py  knowledge_base.py  llm.py  main.py  models.py  pipeline.py  query_expansion.py  schemas.py  vector_store.py
src/esg_rag/web/: index.html
src/esg_rag/web/static/: app.js  styles.css
tests/: test_pipeline.py
